@@ -37,10 +37,14 @@
    [Runtime only libraries]
    # sudo apt-get install libqt5core5a libqt5gui5 libqt5widgets5 libqt5network5 libqt5printsupport5 libqt5multimedia5 libqt5multimedia5-plugins libxcb-screensaver0 libavahi-compat-libdnssd1
    
+   
    [Developer libraries]
    # sudo apt-get install build-essential libxcb-screensaver0-dev qt5-default qtmultimedia5-dev libqt5multimedia5-plugins libavahi-compat-libdnssd-dev
    * if qt5-default is not available remove it and add these packages: qtbase5-dev qtchooser qt5-qmake qtbase-dev-tools
 
+   Arch LINUX
+   # sudo pacman -Sy qt5-base qt5-multimedia libxcb-screensaver0-dbg avahi
+   
    Fedora 22 (thanks to Marcus Frohn)
    # dnf install libxcb.so.1 libxcb-screensaver.so.0 libQt5PrintSupport.so.5 libQt5Multimedia.so.5 libQt5Widgets.so.5 libQt5Network.so.5 libQt5Gui.so.5 libQt5Core.so.5 libdns_sd.so.1 -y
 
